--- a/src/QSTit.rc
+++ b/src/QSTit.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON    DISCARDABLE     "./Imag/QSTit_icon.ico"
+﻿IDI_ICON1               ICON    DISCARDABLE     "./Imag/qstit.ico"
