--- a/src/qstit.desktop
+++ b/src/qstit.desktop
@@ -9,4 +9,4 @@ Type=Application
 StartupNotify=true
 MimeType=text/x-srt;text/plain;application/x-subrip;
 Icon=qstit
-Categories=AudioVideo;AudioVideoEditing;Player;Qt;Education;Languages;Development;Translation;
+Categories=AudioVideo;AudioVideoEditing;Player;Qt;Education;Languages;
