--- a/src/Help/QSTit_Default.cfg
+++ b/src/Help/QSTit_Default.cfg
@@ -1,86 +1,109 @@
+Cent-H=-1                              ' center left
+Cent-V=-1                              ' center top
 Grid-H=160                             ' grid frame height
 Grid-W=1278                            ' grid frame width
-Grid-X=1                               ' grid frame left
-Grid-Y=550                             ' grid frame top
-GridFontFami=MS Shell Dlg 2            ' grid font
+Grid-X=-1                              ' grid frame left
+Grid-Y=-1                              ' grid frame top
+GridFontFami=?                         ' grid font
 GridFontSize=9                         ' grid font size
-JumpBase=200                           ' jump base (1/10 sec.)
+JumpBase=0.2                           ' jump base (1/10 sec.)
 Lang=0                                 ' 0=english,1=other (from QSTit_Lang.txt)
 MenuLink=true                          ' menu linked to grid
-Menu-X=527                             ' menu left
-Menu-Y=759                             ' menu top
-Menu-W=226                             ' menu width
 Menu-H=40                              ' menu height
-Row1BackColo=#000000                   ' row1 backcolor
+Menu-W=236                             ' menu width
+Menu-X=-1                              ' menu left
+Menu-Y=-1                              ' menu top
+Row0BackColo=#000000                   ' line 0 background color
+Row0FontItal=false                     '      font italic
+Row0FontName=?                         '      font
+Row0FontSize=22                        '      font size
+Row0FontWeig=50                        '      font weight
+Row0Heig=30                            '      height
+Row0Hori=0                             '      alignment hori. (left=-1,center=0,right=1)
+Row0Outl=0                             '      outline thickness
+Row0OutlColo=#ffff00                   '      outline color
+Row0Rota=0                             '      rotation
+Row0Show=true                          '      shown
+Row0Spac=0                             '      spacing
+Row0TextColo=#ffffff                   '      text colour
+Row0Vert=0                             '      alignment vert. (top=1,center=0,bottom=-1)
+Row0Widt=-1                            '      width
+Row0-X=0                               '      left (always 0)
+Row0-Y=0                               '      top
+Row1BackColo=#000000                   ' line 1 background color
 Row1FontItal=false                     '      font italic
-Row1FontName=MS Shell Dlg 2            '      font
+Row1FontName=?                         '      font
 Row1FontSize=22                        '      font size
 Row1FontWeig=50                        '      font weight
 Row1Heig=30                            '      height
 Row1Hori=0                             '      alignment hori. (left=-1,center=0,right=1)
 Row1Outl=0                             '      outline thickness
+Row1OutlColo=#ffff00                   '      outline color
 Row1Rota=0                             '      rotation
 Row1Show=true                          '      shown
 Row1Spac=0                             '      spacing
-Row1TextColo=#ffffff                   '      text color
+Row1TextColo=#ffffff                   '      text colour
 Row1Vert=0                             '      alignment vert. (top=1,center=0,bottom=-1)
-Row1Widt=1278                          '      width
+Row1Widt=-1                            '      width
 Row1-X=0                               '      left (always 0)
 Row1-Y=0                               '      top
-Row2BackColo=#000000                   ' row2 backcolor
+Row2BackColo=#000000                   ' line 2 background color
 Row2FontItal=false                     '      font italic
-Row2FontName=MS Shell Dlg 2            '      font
+Row2FontName=?                         '      font
 Row2FontSize=22                        '      font size
 Row2FontWeig=50                        '      font weight
 Row2Heig=30                            '      height
 Row2Hori=0                             '      alignment hori. (left=-1,center=0,right=1)
 Row2Outl=0                             '      outline thickness
+Row2OutlColo=#ffff00                   '      outline color
 Row2Rota=0                             '      rotation
 Row2Show=true                          '      shown
 Row2Spac=0                             '      spacing
-Row2TextColo=#ffffff                   '      text color
+Row2TextColo=#ffffff                   '      text colour
 Row2Vert=0                             '      alignment vert. (top=1,center=0,bottom=-1)
-Row2Widt=1278                          '      width
+Row2Widt=-1                            '      width
 Row2-X=0                               '      left (always 0)
 Row2-Y=30                              '      top
-Row3BackColo=#000000                   ' row3 backcolor
+Row3BackColo=#000000                   ' line 3 background color
 Row3FontItal=false                     '      font italic
-Row3FontName=MS Shell Dlg 2            '      font
+Row3FontName=?                         '      font
 Row3FontSize=22                        '      font size
 Row3FontWeig=50                        '      font weight
 Row3Heig=30                            '      height
 Row3Hori=0                             '      alignment hori. (left=-1,center=0,right=1)
 Row3Outl=0                             '      outline thickness
+Row3OutlColo=#ffff00                   '      outline color
 Row3Rota=0                             '      rotation
 Row3Show=true                          '      shown
 Row3Spac=0                             '      spacing
-Row3TextColo=#ffffff                   '      text color
+Row3TextColo=#ffffff                   '      text colour
 Row3Vert=0                             '      alignment vert. (top=1,center=0,bottom=-1)
-Row3Widt=1278                          '      width
+Row3Widt=-1                            '      width
 Row3-X=0                               '      left (always 0)
 Row3-Y=60                              '      top
-Row4BackColo=#000000                   ' row4 backcolor
+Row4BackColo=#000000                   ' line 4 background color
 Row4FontItal=false                     '      font italic
-Row4FontName=MS Shell Dlg 2            '      font
+Row4FontName=?                         '      font
 Row4FontSize=22                        '      font size
 Row4FontWeig=50                        '      font weight
 Row4Heig=30                            '      height
 Row4Hori=0                             '      alignment hori. (left=-1,center=0,right=1)
 Row4Outl=0                             '      outline thickness
+Row4OutlColo=#ffff00                   '      outline color
 Row4Rota=0                             '      rotation
 Row4Show=true                          '      shown
-Row4TextColo=#ffffff                   '      text color
+Row4TextColo=#ffffff                   '      text colour
 Row4Vert=0                             '      alignment vert. (top=1,center=0,bottom=-1)
-Row4Widt=1278                          '      width
+Row4Widt=-1                            '      width
 Row4-X=0                               '      left (always 0)
 Row4-Y=90                              '      top
 RowsHone=30                            ' height of one row
 RowsNumb=4                             ' number of rows (min=1,max=4)
 RowsSpac=0                             ' space between rows
+Rows-H=120                             ' rows frame height
+Rows-W=-1                              ' rows frame width
 Rows-X=1                               ' rows frame left
 Rows-Y=1                               ' rows frame top
-Rows-W=1278                            ' rows frame width
-Rows-H=120                             ' rows frame height
-TextOutlColo=#7f7f7f                   ' text outline color
 TextSecoItal=false                     ' Second text line in italic
-TextSecoText=false                     ' Single text line displayed on row 2
+TextSecoText=false                     ' Single text line displayed on second line
+WindBack=#000000                       ' screen background color
